# congress-vote-analysis

./: .gitignore  README.md  flake.nix
.github/workflows/: build.yml
nix/: build.nix  report.nix
report/: _quarto.yml  report.qmd
src/: Cargo.toml  main.rs
src_part2/: CSDS313_HW4_Task_2.qmd
