[package]
name = "src"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-nn = "0.7.0"
linfa-reduction = "0.7.0"
ndarray = "0.15.6"
plotters = "0.3.7"
rand = "0.9.2"
rand_pcg = "0.9.0"
statrs = "0.18.0"
strum = "0.27"
strum_macros = "0.27"

[[bin]]
name = "src"
path = "main.rs"
